Update resume links to new Naim Albadawi - Resume.pdf file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p class="hero-subtitle">Full stack engineer specializing in cybersecurity, backend systems, and vulnerability management</p>
                 <p class="hero-description">I build secure, scalable solutions from end-to-end. Currently focused on enterprise security infrastructure and cloud deployments.</p>
                 <div class="hero-links">
-                    <a href="NaimResume.pdf" download="Naim_Badawi_Resume.pdf" target="_blank" class="btn btn-primary">Download Resume</a>
+                    <a href="Naim Albadawi - Resume.pdf" download="Naim_Albadawi_Resume.pdf" target="_blank" class="btn btn-primary">Download Resume</a>
                     <a href="#projects" class="btn btn-secondary">View My Work</a>
                 </div>
                 <div class="social-links">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="about-text-section">
-                    <p>I'm a Software Engineering graduate from Western University with a passion for cybersecurity and full-stack development. I completed a co-op position as an IT Analyst in Vulnerability Management at Ontario Health, where I focused on securing enterprise infrastructure and managing vulnerabilities.</p>
+                    <p>I'm a graduating Software Engineering student from Western University with a passion for cybersecurity and full-stack development. I completed a co-op position as an IT Analyst in Vulnerability Management at Ontario Health, where I focused on securing enterprise infrastructure and managing vulnerabilities.</p>
                     <p>My expertise spans across security compliance, vulnerability remediation, network security, and cloud technologies. I've built solutions ranging from secure body-scanning systems to full-stack web applications with complex backend architectures.</p>
                     <p>I'm constantly learning and pushing the boundaries of what's possible with modern tech stacks, always focused on delivering measurable impact.</p>
                 </div>
@@ -291,10 +291,10 @@
                 <a href="https://www.linkedin.com/in/naimalbadawi/" target="_blank" class="contact-link">
                     <span>💼</span> LinkedIn
                 </a>
-                <a href="https://github.com/naimbadawi" target="_blank" class="contact-link">
+                <a href="https://github.com/Nyme1x" target="_blank" class="contact-link">
                     <span>🔗</span> GitHub
                 </a>
-                <a href="NaimResume.pdf" download="Naim_Badawi_Resume.pdf" target="_blank" class="contact-link">
+                <a href="Naim Albadawi - Resume.pdf" download="Naim_Albadawi_Resume.pdf" target="_blank" class="contact-link">
                     <span>📄</span> Download Resume
                 </a>
             </div>
