Add Netlify Functions setup and update chatbot endpoint

--- a/index.html
+++ b/index.html
@@ -127,44 +127,44 @@
                 <div class="skill-category">
                     <h3>Languages</h3>
                     <div class="skill-tags">
-                        <span class="tag">Python</span>
-                        <span class="tag">JavaScript</span>
-                        <span class="tag">TypeScript</span>
-                        <span class="tag">Java</span>
-                        <span class="tag">C++</span>
-                        <span class="tag">Bash</span>
+                        <span class="tag" data-skill="Python" data-definition="A high-level, interpreted programming language known for its simplicity and readability. Used in web development, data science, ML, and automation.">Python</span>
+                        <span class="tag" data-skill="JavaScript" data-definition="A versatile scripting language that powers interactive web applications and runs in all web browsers. Essential for front-end development.">JavaScript</span>
+                        <span class="tag" data-skill="TypeScript" data-definition="A superset of JavaScript that adds static typing and advanced features, improving code quality and developer experience in large-scale projects.">TypeScript</span>
+                        <span class="tag" data-skill="Java" data-definition="A general-purpose, object-oriented programming language known for its 'write once, run anywhere' philosophy and strong type system.">Java</span>
+                        <span class="tag" data-skill="C++" data-definition="A powerful, low-level language combining procedural and object-oriented features, widely used for performance-critical systems and game development.">C++</span>
+                        <span class="tag" data-skill="Bash" data-definition="A Unix shell and command language used for scripting and automating system administration tasks in Linux and macOS environments.">Bash</span>
                     </div>
                 </div>
                 <div class="skill-category">
                     <h3>Web Technologies</h3>
                     <div class="skill-tags">
-                        <span class="tag">React</span>
-                        <span class="tag">HTML/CSS</span>
-                        <span class="tag">Node.js</span>
-                        <span class="tag">SQL</span>
-                        <span class="tag">MySQL</span>
-                        <span class="tag">NoSQL</span>
+                        <span class="tag" data-skill="React" data-definition="A JavaScript library for building interactive user interfaces with reusable components. Managed by Facebook, widely used for modern web apps.">React</span>
+                        <span class="tag" data-skill="HTML/CSS" data-definition="HTML structures web content while CSS styles it. Together they form the foundation of all web pages and user interfaces.">HTML/CSS</span>
+                        <span class="tag" data-skill="Node.js" data-definition="A JavaScript runtime environment that allows server-side development using JavaScript. Enables full-stack JavaScript development.">Node.js</span>
+                        <span class="tag" data-skill="SQL" data-definition="Structured Query Language for managing and querying relational databases. Essential for data manipulation and complex database operations.">SQL</span>
+                        <span class="tag" data-skill="MySQL" data-definition="A popular open-source relational database management system. Widely used for web applications and data storage.">MySQL</span>
+                        <span class="tag" data-skill="NoSQL" data-definition="Non-relational databases like MongoDB that store data in flexible formats (JSON, documents) rather than rigid tables.">NoSQL</span>
                     </div>
                 </div>
                 <div class="skill-category">
                     <h3>Tools & Platforms</h3>
                     <div class="skill-tags">
-                        <span class="tag">AWS</span>
-                        <span class="tag">Docker</span>
-                        <span class="tag">Git</span>
-                        <span class="tag">Linux</span>
-                        <span class="tag">BigFix</span>
-                        <span class="tag">Apache</span>
+                        <span class="tag" data-skill="AWS" data-definition="Amazon Web Services - a leading cloud computing platform providing scalable infrastructure, storage, databases, and more.">AWS</span>
+                        <span class="tag" data-skill="Docker" data-definition="Containerization platform that packages applications and dependencies into lightweight, portable containers for consistent deployment.">Docker</span>
+                        <span class="tag" data-skill="Git" data-definition="A distributed version control system for tracking code changes, enabling collaboration, and managing project history.">Git</span>
+                        <span class="tag" data-skill="Linux" data-definition="An open-source operating system kernel used in servers, cloud systems, and many embedded systems worldwide.">Linux</span>
+                        <span class="tag" data-skill="BigFix" data-definition="An enterprise endpoint management and security platform used for patch management and vulnerability remediation at scale.">BigFix</span>
+                        <span class="tag" data-skill="Apache" data-definition="A widely-used open-source web server software that serves web content and is highly configurable and extensible.">Apache</span>
                     </div>
                 </div>
                 <div class="skill-category">
                     <h3>Security & Compliance</h3>
                     <div class="skill-tags">
-                        <span class="tag">Vulnerability Management</span>
-                        <span class="tag">Cybersecurity</span>
-                        <span class="tag">SCUM</span>
-                        <span class="tag">CIS Compliance</span>
-                        <span class="tag">AWS Security</span>
+                        <span class="tag" data-skill="Vulnerability Management" data-definition="The process of identifying, assessing, and remediating security vulnerabilities in systems to reduce exposure to threats.">Vulnerability Management</span>
+                        <span class="tag" data-skill="Cybersecurity" data-definition="The practice of protecting computer systems, networks, and data from unauthorized access and cyber attacks.">Cybersecurity</span>
+                        <span class="tag" data-skill="SCUM" data-definition="Software Update for Microsoft products. A tool used to manage and deploy security patches for Windows systems.">SCUM</span>
+                        <span class="tag" data-skill="CIS Compliance" data-definition="Adherence to Center for Internet Security standards that provide benchmarks and best practices for securing IT systems.">CIS Compliance</span>
+                        <span class="tag" data-skill="AWS Security" data-definition="Security features and best practices in AWS including IAM, encryption, VPCs, and compliance certifications.">AWS Security</span>
                     </div>
                 </div>
             </div>
@@ -222,14 +222,15 @@
                     </div>
                     <p class="project-description">Designed and implemented a comprehensive secure 3D body-scanning and measurement extraction system with privacy-aware handling of biometric data. Developed full pipeline for generating personalized 3D models with integrity checks, implemented computer vision algorithms and calibration routines, and built secure workflow to transmit user measurements with safe transfer practices and access control.</p>
                     <ul class="project-tech">
-                        <li>Computer Vision</li>
-                        <li>3D Modeling</li>
-                        <li>Image Processing</li>
-                        <li>Security & Encryption</li>
-                        <li>Data Integrity</li>
-                        <li>Python</li>
-                        <li>API Design</li>
+                        <li data-skill="Computer Vision" data-definition="Used to process body scan images and extract biometric measurements from 3D scans with high precision">Computer Vision</li>
+                        <li data-skill="3D Modeling" data-definition="Used to generate personalized 3D body models from scan data for visualization and analysis">3D Modeling</li>
+                        <li data-skill="Image Processing" data-definition="Used to enhance and analyze scan images to ensure accuracy of measurements and model generation">Image Processing</li>
+                        <li data-skill="Security & Encryption" data-definition="Implemented to protect sensitive biometric data with secure encryption during storage and transmission">Security & Encryption</li>
+                        <li data-skill="Data Integrity" data-definition="Ensured all measurements and models maintained accuracy with integrity checks throughout the pipeline">Data Integrity</li>
+                        <li data-skill="Python" data-definition="Core language used for the entire system including computer vision algorithms, data processing, and calibration routines">Python</li>
+                        <li data-skill="API Design" data-definition="Designed secure APIs for safe transmission of user measurements with proper access controls">API Design</li>
                     </ul>
+                    <a href="https://www.youtube.com/watch?v=TWFK-S1fRH8" target="_blank" class="project-link">View Project</a>
                 </div>
 
                 <div class="project-card">
@@ -238,11 +239,12 @@
                     </div>
                     <p class="project-description">Supervised development of an interactive web application with Cheer Group to enhance daily living experiences for children with disabilities, including real-time communication tools and resource sharing features.</p>
                     <ul class="project-tech">
-                        <li>React</li>
-                        <li>Full Stack Development</li>
-                        <li>MongoDB</li>
-                        <li>User Experience</li>
+                        <li data-skill="React" data-definition="Used to build interactive and responsive UI components for real-time communication with children with disabilities">React</li>
+                        <li data-skill="Full Stack Development" data-definition="Developed both the frontend interface and backend server to support resource sharing and communication features">Full Stack Development</li>
+                        <li data-skill="MongoDB" data-definition="Used to store user profiles, messages, and shared resources in a flexible, scalable document format">MongoDB</li>
+                        <li data-skill="User Experience" data-definition="Designed with accessibility and usability in mind to ensure children with disabilities can easily navigate and use the app">User Experience</li>
                     </ul>
+                    <a href="https://www.youtube.com/watch?v=fxfddEC3Tc8" target="_blank" class="project-link">View Project</a>
                 </div>
 
                 <div class="project-card">
@@ -251,11 +253,30 @@
                     </div>
                     <p class="project-description">Led development of a full-stack web-based card collecting game with MySQL backend and user query functionality, featuring five unique user-centric features and secure authentication.</p>
                     <ul class="project-tech">
-                        <li>SQL</li>
-                        <li>Full Stack</li>
-                        <li>MySQL</li>
-                        <li>JSON Web Tokens</li>
+                        <li data-skill="SQL" data-definition="Used for complex database queries to manage card collections, user data, and trading functionality">SQL</li>
+                        <li data-skill="Full Stack" data-definition="Built the complete card game system from frontend UI to backend database management and game logic">Full Stack</li>
+                        <li data-skill="MySQL" data-definition="Used as the primary database to store cards, user accounts, game state, and transaction history">MySQL</li>
+                        <li data-skill="JSON Web Tokens" data-definition="Implemented JWT authentication to secure user accounts and prevent unauthorized access to player data">JSON Web Tokens</li>
                     </ul>
+                    <a href="https://github.com/AlexandraLHeureuxECE/SQLCollectiverseGame" target="_blank" class="project-link">View Project</a>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <h3>VitalityAI</h3>
+                        <span class="tag tag-featured">Latest</span>
+                    </div>
+                    <p class="project-description">A full-stack AI health & fitness platform using Next.js, Tailwind CSS, Python, and OpenAI APIs supporting real-time chat, voice interaction, and personalized coaching. Trained ML models (Logistic Regression, SVM) on 300+ FAQs to route users across 10+ chatbot personas with NLP pipelines for keyword extraction and intent detection.</p>
+                    <ul class="project-tech">
+                        <li data-skill="Next.js" data-definition="Used to build the full-stack health platform with server-side rendering and API routes for chatbot and voice interaction">Next.js</li>
+                        <li data-skill="Python" data-definition="Used for backend logic, ML model training on 300+ FAQs, and NLP pipeline implementation">Python</li>
+                        <li data-skill="OpenAI APIs" data-definition="Integrated for dynamic conversational responses from AI chatbot across 10+ different personas">OpenAI APIs</li>
+                        <li data-skill="scikit-learn" data-definition="Used to train Logistic Regression and SVM models for intelligent user routing across chatbot personas">scikit-learn</li>
+                        <li data-skill="Tailwind CSS" data-definition="Used to design and style the health platform UI with responsive, clean, and modern interface">Tailwind CSS</li>
+                        <li data-skill="Machine Learning" data-definition="Trained models on FAQ data to intelligently route users to appropriate chatbot personas and coaching specialties">Machine Learning</li>
+                        <li data-skill="NLP" data-definition="Implemented keyword extraction and intent detection to understand user queries and provide personalized responses">NLP</li>
+                    </ul>
+                    <a href="https://www.youtube.com/watch?v=qa7W_t27V4Q" target="_blank" class="project-link">View Project</a>
                 </div>
             </div>
         </div>
@@ -300,6 +321,35 @@
             </div>
         </div>
     </section>
+
+    <!-- NaimAI Chatbot Button -->
+    <button id="naimaiButton" class="naimai-button" title="Chat with NaimAI">
+        <span class="naimai-icon">🤖</span>
+    </button>
+
+    <!-- NaimAI Chatbot Modal -->
+    <div id="naimaiModal" class="naimai-modal">
+        <div class="naimai-container">
+            <div class="naimai-header">
+                <h3>NaimAI</h3>
+                <button id="closeChatbot" class="close-btn">✕</button>
+            </div>
+            <div class="naimai-messages" id="chatMessages"></div>
+            <div class="naimai-input-area">
+                <input type="text" id="userInput" placeholder="Ask about Naim, projects, tech stack..." class="naimai-input" />
+                <button id="sendBtn" class="send-btn">Send</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Skill Definition Modal -->
+    <div id="skillModal" class="skill-modal">
+        <div class="skill-modal-content">
+            <span class="skill-modal-close">✕</span>
+            <h4 id="skillName"></h4>
+            <p id="skillDefinition"></p>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
