Add Autonomous Cyber Defense Simulator project

--- a/index.html
+++ b/index.html
@@ -278,6 +278,25 @@
                     </ul>
                     <a href="https://www.youtube.com/watch?v=qa7W_t27V4Q" target="_blank" class="project-link">View Project</a>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <h3>Autonomous Cyber Defense Simulator</h3>
+                        <span class="tag tag-featured">Featured</span>
+                    </div>
+                    <p class="project-description">An interactive educational platform that simulates adversarial cybersecurity scenarios through autonomous agents. Features Red Team (offensive) attackers performing network reconnaissance and strategic attacks, and Blue Team (defensive) monitors detecting threats and responding in real-time. Includes 5-host network simulation, live Streamlit dashboard with animated attack visualizations, real-time event logging, and step-by-step scenario replays demonstrating cybersecurity concepts like vulnerability exploitation, threat detection, and incident response.</p>
+                    <ul class="project-tech">
+                        <li data-skill="Python" data-definition="Core language for autonomous agent logic, attack/defense strategies, and simulation engine">Python 3.9</li>
+                        <li data-skill="Streamlit" data-definition="Web framework used to build the interactive dashboard with live metrics and animated attack visualizations">Streamlit</li>
+                        <li data-skill="SQLite" data-definition="Database for event-driven logging tracking all attack/defense events with detailed analytics">SQLite3</li>
+                        <li data-skill="Cybersecurity" data-definition="Demonstrates TTPs, vulnerability exploitation, threat detection, and defensive adaptation strategies">Cybersecurity</li>
+                        <li data-skill="Multi-Agent Systems" data-definition="Autonomous Red and Blue team agents compete and adapt strategies based on observed patterns">Autonomous Agents</li>
+                        <li data-skill="Pandas" data-definition="Used for data analysis and creating performance metrics comparing team strategies">Pandas</li>
+                        <li data-skill="Matplotlib" data-definition="Used for analytics visualization and real-time performance metrics displayed on the dashboard">Matplotlib</li>
+                        <li data-skill="Network Simulation" data-definition="Features configurable multi-host environment with vulnerable services for educational security training">Network Simulation</li>
+                    </ul>
+                    <a href="https://github.com/Nyme1x/autonomous-cyber-defense-simulator" target="_blank" class="project-link">View on GitHub</a>
+                </div>
             </div>
         </div>
     </section>
