Add Password Security Simulator project

--- a/index.html
+++ b/index.html
@@ -297,6 +297,24 @@
                     </ul>
                     <a href="https://github.com/Nyme1x/autonomous-cyber-defense-simulator" target="_blank" class="project-link">View on GitHub</a>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <h3>Password Security Simulator</h3>
+                        <span class="tag tag-featured">Educational</span>
+                    </div>
+                    <p class="project-description">An interactive educational tool for understanding password security, hashing algorithms, and cryptographic concepts. Generate hashes using MD5, SHA-1, SHA-256, SHA-512, PBKDF2, and bcrypt while comparing salted vs unsalted outputs. Run controlled brute-force and dictionary attacks against test hashes to visualize attack speeds, and explore classic ciphers including Caesar, Vigenère, and a simplified Enigma machine. Built for learning with test data only—no network access or external targets.</p>
+                    <ul class="project-tech">
+                        <li data-skill="Cryptography" data-definition="Deep dive into hashing algorithms including MD5, SHA-1, SHA-256, SHA-512, PBKDF2, and bcrypt implementations">Cryptography</li>
+                        <li data-skill="Password Hashing" data-definition="Demonstrates salted vs unsalted hashing and why adaptive algorithms like bcrypt provide better security">Password Hashing</li>
+                        <li data-skill="Brute Force Attacks" data-definition="Simulates controlled brute-force and dictionary attacks to show how quickly weak passwords can be compromised">Attack Simulation</li>
+                        <li data-skill="Hash Comparison" data-definition="Visualizes security differences between legacy hashes (MD5, SHA-1) and modern adaptive algorithms">Defense Comparison</li>
+                        <li data-skill="Classical Ciphers" data-definition="Implements Caesar cipher, Vigenère cipher, and simplified Enigma machine for historical cryptography context">Classical Ciphers</li>
+                        <li data-skill="Python" data-definition="Primary language for cryptographic implementations, attack simulations, and educational demonstrations">Python</li>
+                        <li data-skill="Educational Security" data-definition="Designed for students and developers to safely learn password security without targeting actual systems">Educational Tool</li>
+                    </ul>
+                    <a href="https://github.com/Nyme1x/hash-attack-simulator" target="_blank" class="project-link">View on GitHub</a>
+                </div>
             </div>
         </div>
     </section>
